Fixed overflow for network mistmatch, market cards. Fixed table header height.

--- a/packages/augur-simplified/src/modules/common/labels.styles.less
+++ b/packages/augur-simplified/src/modules/common/labels.styles.less
@@ -458,7 +458,6 @@
 
     @media @breakpoint-mobile-tablet {
       margin-bottom: @size-16;
-      margin-top: -@size-8;
     }
   }
 }
@@ -490,10 +489,6 @@
       margin-left: 0;
       margin-right: 0;
       margin-bottom: @size-16;
-
-      &:first-child {
-        margin-top: -@size-8;
-      }
     }
   }
 }
@@ -539,7 +534,7 @@
       height: @size-44;
       min-height: @size-44;
       max-height: @size-44;
-  
+
       > label {
         > svg {
           height: @size-44;
