--- a/packages/augur-simplified/src/modules/common/tables.styles.less
+++ b/packages/augur-simplified/src/modules/common/tables.styles.less
@@ -92,6 +92,7 @@
 
   @media @breakpoint-mobile-tablet {
     padding: @size-10 @size-16;
+    min-height: @size-56;
   }
 }
 
